fix issue too much transaction amount

--- a/frontend-react/src/components/NavBar/NavBar.css
+++ b/frontend-react/src/components/NavBar/NavBar.css
@@ -253,3 +253,8 @@
     position: absolute;
     bottom: 20px;
 }
+
+#dark-mode:hover,
+#light-mode:hover {
+    background-color: rgb(196, 196, 196);
+}
